# rust-plugin

./: Cargo.toml  README.md
main/: Cargo.toml
main/src/: main.rs
plugin/: Cargo.toml
plugin/src/: lib.rs
plugins/user-plugin/: Cargo.toml
plugins/user-plugin-trait/: Cargo.toml
plugins/user-plugin-trait/src/: lib.rs
plugins/user-plugin/src/: lib.rs
