[package]
name = "user-plugin-trait"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plugin = { workspace = true }
libloading = { workspace = true }
serde = { workspace = true, features = ["derive"]}
