[package]
name = "user-plugin"
version = "0.1.0"
edition = "2021"
[lib]
crate-type = ["dylib"]
name = "user"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

jsonwebtoken = "*"
plugin = { workspace = true }
user-plugin-trait = { workspace = true }
